[package]
name = "gclip"
version = "0.1.0"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.12.0"
glib = "0.9.0"
gio = "0.8.0"
atty = "0.2.14"

[dependencies.gtk]
version = "0.8.0"
default-features = false  # just in case
features = ["v3_16"]
