[package]
name = "gclip"
version = "0.1.1"
authors = ["Nbiba Bedis <bedisnbiba@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "0.12.1"
atty = "0.2.14"

[dependencies.gtk]
version = "0.8.1"
default-features = false  # just in case
features = ["v3_16"]
